# MicUp

./: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/micplugin/: IAudioPlugin.aidl
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  ClapHost.cpp  ClapHost.h  Lv2Host.cpp  Lv2Host.h  PluginHost.cpp  PluginHost.h  TtlParser.cpp  TtlParser.h  Vst3Bridge.cpp  Vst3Bridge.h
app/src/main/cpp/vst3/: vst3_iids.cpp
app/src/main/cpp/vst3/base/: fplatform.h  ftypes.h  ipluginbase.h
app/src/main/cpp/vst3/vst/: ivstaudioprocessor.h  ivstcomponent.h  ivsteditcontroller.h  vsttypes.h
app/src/main/java/com/micplugin/: CrashReporter.kt  MainActivity.kt  MicPluginApp.kt
app/src/main/java/com/micplugin/audio/: AudioEngine.kt  OboeEngine.kt
app/src/main/java/com/micplugin/di/: AppModule.kt
app/src/main/java/com/micplugin/plugin/: PluginChain.kt  PluginDescriptor.kt  PluginImporter.kt  PluginManager.kt  PluginPathPrefs.kt
app/src/main/java/com/micplugin/preset/: PresetManager.kt
app/src/main/java/com/micplugin/service/: AudioProcessingService.kt  ShizukuManager.kt  SoftwareLoopback.kt  VirtualMicService.kt
app/src/main/java/com/micplugin/ui/: AudioViewModel.kt  Components.kt  MainScreen.kt  PluginBrowserScreen.kt  (+4 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
(+1 files in other folders)
